--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "name": ""
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "parse5": "^5.1.1",
+    "request": "^2.88.0",
+    "xml2js": "^0.4.23",
+    "xmldom": "^0.2.1",
+    "xmlserializer": "^0.6.1",
+    "xpath": "0.0.27"
   }
 }
