--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "parse5": "^5.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "request": "^2.88.0",
     "xml2js": "^0.4.23",
     "xmldom": "^0.2.1",
