--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "name": ""
   },
   "dependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-preset-react-app": "^9.1.0",
     "express": "^4.17.1",
     "formik": "^2.1.1",
     "parse5": "^5.1.1",
