--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.0",
+    "bootstrap": "^4.4.1",
+    "css-loader": "^3.4.2",
     "express": "^4.17.1",
     "formik": "^2.1.1",
     "parse5": "^5.1.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "request": "^2.88.0",
     "webpack": "^4.41.5",
@@ -28,6 +31,5 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch"
-     
   }
 }
