--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "name": ""
   },
   "dependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "babel-preset-react-app": "^9.1.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "babel-preset-react-app": "^9.1.2",
     "bootstrap": "^4.4.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.1",
     "express": "^4.17.1",
-    "formik": "^2.1.1",
+    "formik": "^2.1.4",
     "parse5": "^5.1.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "request": "^2.88.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "request": "^2.88.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "xml2js": "^0.4.23",
     "xmldom": "^0.2.1",
     "xmlserializer": "^0.6.1",
